[workspace]
members = [
    "core",
    "datatypes",
    "benchmark/tests/disjoint_single",
    "benchmark/tests/disjoint_percore", 
    "benchmark/tests/shared_single",
    "benchmark/tests/shared_percore",
    "benchmark/tests/basic",     
    "examples/websites",
    "examples/websites-prometheus",
    "examples/port_count",
    # Exclude from compilation; many subscriptions takes a long time to compile
    # "examples/filter_stats",
    "examples/protocols",
    "examples/basic",
    "examples/basic_file",
    "examples/log_ssh",
    "examples/streaming",
    "examples/my_simple",
    "examples/disjoint_percore",
    "examples/disjoint_single", 
    "examples/shared_percore",  
    "examples/shared_single" 
    
]
resolver = "2"

[profile.release]
lto = true

[patch.crates-io]
pcap = { git = 'https://github.com/thegwan/pcap', branch = 'compile-optimized' }

