[package]
name = "my_simple"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.8.4"
retina-core = { path = "../../core" }
retina-filtergen = { path = "../../filtergen" }
retina-datatypes = { path = "../../datatypes" }
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.7.3"
