[package]
name = "shared_single"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.8.4"
retina-core = { path = "../../core" }
retina-filtergen = { path = "../../filtergen" }
retina-datatypes = { path = "../../datatypes" }
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
regex = "1.7.3"
crossbeam = "0.8.4"
nix = { version = "0.30.1", features = ["sched", "process"] }
once_cell = "1.21.3"

